#######################################################################
# v0.13.3 (unreleased)
#######################################################################
New features:
- #294: [Core] Support alternate hosts file format that doesn't duplicate the local 
  host name (useful for Mac OS X)

Changes/improvements:
- #298: [Core] Look at environment variables to fill @user@ macro where possible
- #301: [CLI] Remove hardcoded path to /usr/bin/php
- #295: [Core] Default for vhost_config_path is more environment-specific than necessary
- #302: [Core] Auto-create directories for vhost_config_path
- #309: [Micro HTTP server] Show hostname in WADF HTTP server default index page 
- #315: [Core] Change the ordering of wadf-(reprocess/deploy) so that installing the crontab is the last operation
- #303: [Core] Replace _rmDir() function with call to System::rm() 
- [CLI] Minor improvements to command line help
- #300: [Documentation] Update workstation HOWTO to include usage with Mac OS X/MAMP

Bugs fixed:
- #297: [CLI] "wadf-reprocess --db" only works if there is a schema file
- #321: [Core] Infinite recursion in self-referencing macros

#######################################################################
# v0.13.2 (2009-10-19)
#######################################################################
Fix some regressions with support for older versions of SVN, and some more
tweaks to the deployment process for local PEAR packages (e.g. checkouts of
PEAR-based applications/libraries)

Changes/improvements:
- #265: Output from post deploy script should be marked more clearly
- #266: Improve output when deploying PHP CGI config
- #200: Abstract version control-specific details
- #271: Bad PEAR dependency installation when installing local PEAR packages
  in a single transaction
- #278: Don't downgrade already-installed PEAR packages when activating 
  workaround for PEAR bug 1342
- #280: Don't rely on on $_ENV; use getenv() instead