@@ -184,7 +184,9 @@ post_deploy_script =
 crontab = @deploy_path@/crontab
 
 ; Files to cleanup after deployment. Files are only cleaned up if they are 
-; GENERATED files; that is, if the file also exists with a ".template" extension
+; GENERATED files; that is, if the file also exists with a ".template"
+; extension, unless you prefix the file with "+", in which case it is removed
+; anyway.
 ; Separate multiple files with spaces.
 ; Relative file paths are relative to deploy_path
 post_deploy_cleanup_files = @vhost_config_template@ @db_schema@ @crontab@
